@@ -1,3 +1,7 @@
+Fri Jan 26 21:18:14 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 48.
+
 Fri Jan 26 21:15:26 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 47.
