@@ -1,0 +1,12 @@
+x y z    0.4867373206    1.3206333033   -0.2333178127
+x y z    0.5668176165    1.3711756314   -0.2193558040
+x y z    0.4325251781    1.3399488722   -0.1568307497
+x y z    0.4900487563    1.3295759570   -0.2217392402
+x y z   -0.6790064191    1.2536623801   -0.2955415433
+x y z   -0.6311440220    1.2966579993   -0.2246692210
+x y z   -0.7209390351    1.1783407099   -0.2539408209
+x y z   -0.6782473356    1.2495242556   -0.2811436366
+x y z   -0.7062054082    1.1223820964   -1.1619805834
+x y z   -0.6491590119    1.1248946162   -1.0851579675
+x y z   -0.7948856821    1.1208852325   -1.1259821556
+x y z   -0.7102549262    1.1225121126   -1.1475381286
