@@ -1,0 +1,3 @@
+gawk: synerr2.awk:47: BEGIN { sprintf("%s", $) }
+gawk: synerr2.awk:47:                        ^ syntax error
+EXIT CODE: 1
